Logging with Serilog and Visualization with Seq

--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -26,6 +26,9 @@
     "Google": {
       "Client_ID": "917678472978-qst9uuasfji2hsqshkf2qstll50m7sln.apps.googleusercontent.com"
     }
+  },
+  "Seq": {
+    "ServerURL": "http://localhost:5341/"
   }
 }
 
