--- a/Infrastructure/ECommerceAPI.Persistence/ECommerceAPI.Persistence.csproj
+++ b/Infrastructure/ECommerceAPI.Persistence/ECommerceAPI.Persistence.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\..\Core\ECommerceAPI.Application\ECommerceAPI.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
