--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -29,6 +29,11 @@
   },
   "Seq": {
     "ServerURL": "http://localhost:5341/"
+  },
+  "Mail": {
+    "Username": "omer.faruk.ingec@gmail.com",
+    "Password": "mxajkuqnhwbkryqk",
+    "Host": "smtp.gmail.com"
   }
 }
 
