--- a/Presentation/ECommerceAPI.API/appsettings.json
+++ b/Presentation/ECommerceAPI.API/appsettings.json
@@ -33,7 +33,7 @@
   },
   "Mail": {
     "Username": "omer.faruk.ingec@gmail.com",
-    "Password": "",
+    "Password": "mkrciikvwwvayuxa",
     "Host": "smtp.gmail.com"
   }
 }
