--- a/Infrastructure/ECommerceAPI.Infrastructure/ECommerceAPI.Infrastructure.csproj
+++ b/Infrastructure/ECommerceAPI.Infrastructure/ECommerceAPI.Infrastructure.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.15" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
 
 </Project>
